<resources>
    <string name="app_name">Car_Parts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="sign_up">KAYIT OL</string>
    <string name="password">Şifre</string>
    <string name="name">Ad</string>
    <string name="lastname">Soyad</string>
    <string-array name="carPartArray">
        <item>Lütfen bir ana kategori seçiniz</item>
        <item>Elektrik</item>
        <item>Filtre</item>
        <item>Fren</item>
        <item>Kaporta</item>
        <item>Motor</item>
    </string-array>

    <string-array name="carPartElectricArray">
        <item>Lütfen bir alt kategori seçiniz</item>
        <item>Farlar</item>
        <item>Sigorta Kutuları</item>
        <item>Sinyaller</item>
    </string-array>

    <string-array name="carPartFilterArray">
        <item>Lütfen bir alt kategori seçiniz</item>
        <item>Hava Filtresi</item>
        <item>Polen Filtresi</item>
        <item>Yağ Filtresi</item>
        <item>Yakıt Filtresi</item>
    </string-array>

    <string-array name="carPartBrakeArray">
        <item>Lütfen bir alt kategori seçiniz</item>
        <item>Fren Balatası</item>
        <item>Fren Diski</item>
        <item>ABS Sensörü</item>
    </string-array>

    <string-array name="carPartBodyworkArray">
        <item>Lütfen bir alt kategori seçiniz</item>
        <item>Kapı Kolu</item>
        <item>Kaput</item>
        <item>Tampon</item>
    </string-array>

    <string-array name="carPartEngineArray">
        <item>Lütfen bir alt kategori seçiniz</item>
        <item>Enjektör</item>
        <item>Radyatör</item>
        <item>Triger Kayışı</item>
    </string-array>

</resources>